# ComfyUI-Chinese-Translation

./: README.md  __init__.py  config.json  pyproject.toml
en-US/Menus/: Comfy条件选项.json
en-US/Nodes/: ComfyUI-prompt-formula.json
js/: MenuTranslate.js  SettingsPanel.js  main.js  utils.js  七彩UI.rar  七彩UI2.0.rar  极致低调UI图标，和ComfyUI默认主题色彩一致.rar  解压到当前文件夹并替换，可更换为低调UI.rar
zh-CN/: ComfyUI-ZImagePowerNodes.json
zh-CN/Categories/: AlekPet-nodes.json  ComfyUI-Advanced-ControlNet.json  ComfyUI-Easy-Use.json  ComfyUI-EasyAnimateWrapper.json  ComfyUI-TTP-Toolset.json  ComfyUI-VoxCPM.json  ComfyUI-llama-cpp-vlmforQo.json  ComfyUI-nunchaku.json  ComfyUI_Comfyroll_CustomNodes.json  ComfyUI_FizzNodes.json  ComfyUI_IPAdapter_plus.json  ComfyUI_LayerStyle.json  ComfyUI_RaykoStudio.json  ComfyUI_VNCCS_Utils.json  Comfyui-Resolution-Master.json  Internal.json  LanPaint.json  Other.json  TTS-Audio-Suite.json  WhatDreamsCost-ComfyUI.json  comfyui-animatediff.json  comfyui-art-venture.json  comfyui_controlnet_aux.json  comfyui_scail2_multi_cond.json  radiance.json  rgthree-comfy.json
zh-CN/Menus/: ComfyUI-CrosshairGuidelines.json  ComfyUI-Crystools.json  ComfyUI-Custom-Scripts.json  ComfyUI-Easy-Use.json  ComfyUI-KJNodes.json  ComfyUI-RyanOnTheInside.json  ComfyUI-UltraShape1.json  ComfyUI-子图.json  ComfyUI_Custom_Nodes_AlekPet.json  ComfyUI_FL-Path-Animator.json  ComfyUI_LayerStyle.json  Comfy条件选项.json  Comfy模版汉化-zdfxm.json  Comfy设置菜单及管理器菜单.json  ControlAltAI-Nodes.json  LanPaint.json  RES4LYF.json  TTS-Audio-Suite.json  cg-image-filter.json  cg-use-everywhere.json  comfy_mtb.json  (+8 more)
(+142 files in other folders)
