[project]
name = "chinese-translation"
description = "ComfyUI 语言翻译插件 — 全面、智能、兼容的 ComfyUI 界面多国语言翻译解决方案，默认使用中文。"
version = "2.0.0"
license = {file = "LICENSE.txt"} 

[project.urls]
Repository = "https://github.com/a63976659/ComfyUI-Chinese-Translation"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/a63976659/ComfyUI-Chinese-Translation/wiki"
"Bug Tracker" = "https://github.com/a63976659/ComfyUI-Chinese-Translation/issues"

[tool.comfy]
PublisherId = "a63976659"
DisplayName = "ComfyUI-Chinese-Translation"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

